Fixed #18. Added logout button mobile styling

--- a/var/root/less/hyde/style.less
+++ b/var/root/less/hyde/style.less
@@ -54,7 +54,7 @@ nav {
    }
 }
 .mobile-nav {
-   a {
+   a, button {
       background-color: @background; .border-radius; color: @contrast;
       float: left; font-size: 10px; font-weight: 900; padding: 5px;
       text-align: center; text-transform: uppercase; width: 100%;
@@ -75,6 +75,7 @@ nav {
 }
 .panel button { color: @contrast; }
 .panel form { display: inline; }
+.togglers:focus { outline: none; }
 .header-link {
    font-size: 0.8em; left: 0.5em; opacity: 0; position: relative;
    .transition(opacity 0.2s, ease-in-out 0.1s;);
@@ -83,7 +84,6 @@ h2:hover .header-link, h3:hover .header-link, h4:hover .header-link,
 h5:hover .header-link, h6:hover .header-link {
    opacity: 1;
 }
-.togglers:focus { outline: none; }
 @media (max-width: 768px) {
    .main-nav ul { text-align: right; }
 }
